--- a/TrinityCreator/Properties/Resources.resx
+++ b/TrinityCreator/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="silver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\silver.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tclogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tclogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="yellowsocket" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\yellowsocket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
