Work on quests & wow fonts

--- a/TrinityCreator/Properties/Resources.resx
+++ b/TrinityCreator/Properties/Resources.resx
@@ -157,4 +157,16 @@
   <data name="Faction_dbc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Faction.dbc.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="MORPHEUS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MORPHEUS.TTF;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ARIALN" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ARIALN.TTF;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="FRIZQT__" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FRIZQT__.TTF;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="SKURRI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SKURRI.TTF;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
