--- a/TrinityCreator/Properties/Resources.resx
+++ b/TrinityCreator/Properties/Resources.resx
@@ -172,4 +172,7 @@
   <data name="Credits" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Credits.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="dbclayout" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dbclayout.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
