--- a/TrinityCreator/Properties/Resources.resx
+++ b/TrinityCreator/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="cb_data" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cb_data.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="weapon_notice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\weapon-notice.rtf;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
